--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       <p>Machine learning is a subfield of artificial intelligence (AI). The goal of machine learning generally is to understand the structure of data and fit that data into models that can be understood and utilized by people.</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/timeseries" >
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/timeseries"  target="_blank">
                   <figure class="cc-effect"><img src="images/timeSeries.png" alt="Image" target="_blank"/>
                     <figcaption>
                       <div class="h4">Time Series Analysis</div>
@@ -132,14 +132,14 @@
                   </figure></a></div>
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/webScraping">
-                  <figure class="cc-effect"><img src="images/webScraping.jpg" alt="Image" target="_blank"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/webScraping"  target="_blank">
+                  <figure class="cc-effect"><img src="images/webScraping.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Web Scraping</div>
                       <p>Web scraping is the process of using bots to extract content and data from a website</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/DataVisualization">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/tree/datavisualization"  target="_blank">
                   <figure class="cc-effect"><img src="images/DataVisualization.jpg" alt="Image"  target="_blank"/>
                     <figcaption>
                       <div class="h4">Data Visualization</div>
@@ -148,7 +148,7 @@
                   </figure></a></div>
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/compare/pyguide">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/compare/pyguide"  target="_blank">
                   <figure class="cc-effect"><img src="images/pyGuide.jpg" alt="Image"  target="_blank"/>
                     <figcaption>
                       <div class="h4">PyGuide</div>
@@ -157,7 +157,7 @@
                   </figure></a></div>
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/compare/mlguide">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/rafaelreisdasilva/rafaelreis/compare/mlguide"  target="_blank">
                   <figure class="cc-effect"><img src="images/machineLearningGuide.png" alt="Image" target="_blank"/>
                     <figcaption>
                       <div class="h4">ML Guide</div>
