--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>-->
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Certifications</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#certications">Certifications</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
@@ -450,7 +450,7 @@
     </div>
   </div>
 </div>
-<div class="section" id="reference">
+<div class="section" id="certications">
   <div class="container cc-reference">
     <div class="h4 mb-4 text-center title">Certifications</div>
     <div class="card" data-aos="zoom-in">
