--- a/index.html
+++ b/index.html
@@ -471,6 +471,18 @@
                 <div class="h7 pt-2">Coursera</div>
                 <p class="category"></p>
               </div>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/HackerRank.png" alt="Image"/>
+                <div class="h7 pt-2">HackerRank</div>
+                <p class="category"></p>
+              </div>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/kaggle.png" alt="Image"/>
+                <div class="h7 pt-2">Kaggle</div>
+                <p class="category"></p>
+              </div>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/pluralsight.png" alt="Image"/>
+                <div class="h7 pt-2">Pluralsight</div>
+                <p class="category"></p>
+              </div>
             </div>
           </div>
         </div>
