--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 <div class="h7 pt-2">Datacamp</div>
                 <p class="category"></p>
               </div>
-              <div class="col-lg-2 col-md-3 cc-reference-header"><a href="https://www.udemy.com/user/rafael-reis-da-silva-2/" target="_blank"></a> <img src="images/udemy.png" alt="Image"/></a>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><a href="https://www.udemy.com/user/rafael-reis-da-silva-2/" target="_blank"> <img src="images/udemy.png" alt="Image"/></a>
                 <div class="h7 pt-2">Udemy</div>
                 <p class="category"></p>
               </div>
