--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <div class="h7 pt-2">Coursera</div>
                 <p class="category"></p>
               </div>
-              <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/HackerRank.png" alt="Image"/>
+              <div class="col-lg-2 col-md-3 cc-reference-header"><a href="https://www.hackerrank.com/silva_reis_rafa1" target="_blank"><img src="images/HackerRank.png" alt="Image"/></a>
                 <div class="h7 pt-2">HackerRank</div>
                 <p class="category"></p>
               </div>
