--- a/index.html
+++ b/index.html
@@ -305,8 +305,12 @@
           <div class="card-body">
             <div class="h5">Fixed Income Analyst - Xp Inc</div>
             <p><ul>
-               <li>Repurchase Agreement (Repo) https://www.investopedia.com/terms/r/repurchaseagreement.asp</li>
-               <li> RPA automate trade matching and settlement</p></li>
+              <li>Process of cash generation and cash zeroing through repurchase agreements</li>
+              <li>Improving/automating spreadsheets and routines.</li>
+              <li>Resolving daily cash and position exceptions.</li>
+              <li>Assisting the reconciliation vendor and custodian banks to resolve breaks.</li>
+              <li>Performing extensive parallel run testing to validate results between legacy and automated process</li>
+              <li>Collaborating with the investment operations teams to evaluate manual processes and design automation to replace those processes</li>
             </ul>
           </div>
         </div>
