--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2018 - 2022</p>
+            <p>2018 - 2021</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
@@ -454,7 +454,8 @@
           <div class="card-body">
             <div class="h5">Science and Mathematics</div>
             <p class="category">COTUCA - TECHNICAL SCHOOL OF CAMPINAS STATE UNIVERSITY UNICAMP</p>
-            <p></p>
+            <p>Known as Brazil's #3 ranked public school for its students average grades in ENEM (Brazil's national exam for university undergraduate entrance), the school values Humanities, STEM, and Social Sciences.
+            To attend it, students must pass an exam with an yearly acceptance rate of less than 9%</p>
           </div>
         </div>
       </div>
