--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
             <p>2015 - 2017</p>
-            <div class="h5">Bachelor's Degree</div>
+            <div class="h5">Dropped out</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -446,7 +446,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2008 - 2009</p>
+            <p>2008 - 2010</p>
             <div class="h5">High School</div>
           </div>
         </div>
