--- a/index.html
+++ b/index.html
@@ -362,11 +362,58 @@
         </div>
       </div>
     </div>
+
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>jun 2015 - jan 2016</p>
+            <div class="h5">Fox Jobs</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Software Engineer and Co-founder </div>
+            <p> 
+              Responsible for developing the new site and modeling the business plan in the Startup Farm
+              Acceleration Program. Finalist, 10 months.<br>
+              
+              Business: Helping young talents find the best job opportunity that fits their values.
+              Prospecting new clients (Hunter profile) - B2B
+              <ul>
+                <li>Responsible for building the back-end, modeling the database, classes and interfaces with the front-end</li>
+               <li>Responsible for digital marketing, user acquisition strategy and partnership prospection.</li>
+               <li>Results: In 3 months we reached 3,000 university students registered in the platform investing R$500,00.</li>
+              </ul>
+            </p>
+          </div>
+        </div>
+      </div>
+    
   </div>
-</div>
+</div> <!-- div end -->
 <div class="section">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-education-header">
+            <p>2021</p>
+            <div class="h5">Academic Exchange</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Bachelor of Business Administration</div>
+            <p class="category">University of Illinois Chicago (UIC)</p>
+            Scholarship holder ✍ <br>
+            Relevant Coursework: <br>
+            Negotiation and resolution conflict, Entrepreneurship/Entrepreneurial Studies, Leadership & Organizational Behavior, Strategy
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -379,7 +426,8 @@
           <div class="card-body">
             <div class="h5">Bachelor of Business Administration</div>
             <p class="category">Fundação Getúlio Vargas - FGV</p>
-            Scholarship holder ✍
+            Scholarship holder ✍ <br>
+            Academic Performance and Financial Aid Scholarship -Instituto Grupo Pão Açúcar
           </div>
         </div>
       </div>
@@ -396,7 +444,12 @@
           <div class="card-body">
             <div class="h5">Computer Science</div>
             <p class="category">University of the People</p>
-            Scholarship holder ✍
+            Financial Aid Scholarship✍<br>
+            Relevant Coursework:<br>
+            <ul>
+             <li>Software Construction, Computer Language Engineering, Computer Systems Engineering</li>
+             <li>Design and Analysis of Algorithms, Theory of Computation</li>
+          </ul>  
           </div>
         </div>
       </div>
