--- a/index.html
+++ b/index.html
@@ -297,20 +297,21 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>June 2020 - Present</p>
-            <div class="h5">Xp Inc.</div>
+            <p>Jan 2022 - Present</p>
+            <div class="h5">Netflix</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Fixed Income Analyst - Xp Inc</div>
+            <div class="h5">Technical Research Specialist (Streaming & Devices)</div>
             <p><ul>
-              <li>Process of cash generation and cash zeroing through repurchase agreements</li>
-              <li>Improving/automating spreadsheets and routines.</li>
-              <li>Resolving daily cash and position exceptions.</li>
-              <li>Assisting the reconciliation vendor and custodian banks to resolve breaks.</li>
-              <li>Performing extensive parallel run testing to validate results between legacy and automated process</li>
-              <li>Collaborating with the investment operations teams to evaluate manual processes and design automation to replace those processes</li>
+            <li>Create ETL jobs to consolidate data from different sources and enable the creation of effective dashboards and visualizations.</li>
+            <li>Analyze data from varied sources to discover customer impacting issues originating from any Netflix internal software development. </li>
+            <li>Root cause discovered issues and coordinate with engineering teams to deploy solutions.</li>
+            <li>Design and implement new systems to improve issue discovery, reliability, and resilience of production.</li>
+            <li>Building scalable solutions to deliver the best business, system, and customer experience with Netflix streaming</li>
+            <li>Utilize a variety of data analytics tools, such as SQL, ElasticSearch, Tableau, and quickly learned how to use powerful Netflix custom data analytics tools, such as Lumen and Atlas.</li>
+            <li>Experience with adding telemetry, distributed tracing, and performance debugging and with building solutions to fix them using code</li>
             </ul>
             </p>
           </div>
@@ -321,20 +322,21 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>December 2018 - June 2020</p>
-            <div class="h5">UBS</div>
+            <p>June 2020 - Dec 2021</p>
+            <div class="h5">XP INC</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Equity Trading Intern </div>
+            <div class="h5">Python Developer </div>
             <p>
               <ul>
-                <li>Running daily Client Position and End of Day Results reports.</li>
-                <li>Assisting on client support and trade input.</li>
-                <li>Improving/automating spreadsheets and routines.</li>
-                <li>Aligning workflow with Trading Desk, Back-Office and Middle-Office.</li>
-                <li>Supporting the team on intraday activities.</li>
+              <li>Take part in large-scale application design, development, and maintenance of securities platforms and systems</li>
+              <li>Work with project managers, business analysts and development lead to help build a middleware/ETL</li>
+              <li>Provide architectural and design recommendation using Python</li>
+              <li>Take part as one of the developers to help build / map in middleware/ETL space</li>
+              <li>Code using best practices and ensure minimal maintenance is required</li>
+              <li>Effectively communicate with project team and vendor to resolve issues</li>
             </ul>
             </p>
           </div>
@@ -440,13 +442,13 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2018 - 2021</p>
+            <p>2018 - 2023</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Business Administration</div>
+            <div class="h5"> Business Administration</div>
             <p class="category">Fundação Getúlio Vargas - FGV</p>
             Scholarship holder ✍ <br>
             Academic Performance and Financial Aid Scholarship -Instituto Grupo Pão Açúcar
@@ -458,7 +460,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2020 - 2021</p>
+            <p>2020 - 2023</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
