--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Equity Trading Intern </div>
+            <div class="h5">Equity Trading  </div>
             <p>     <ul>
               <li>Running daily Client Position and End of Day Results reports.</li>
               <li>Assisting on client support and trade input.</li>
@@ -488,7 +488,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Associate Degree in Finance</div>
+            <div class="h5"> Finance</div>
             <p class="category">Saint Paul Escola de Negócios</p>
             <p>
               Scholarship holder ✍
@@ -507,8 +507,8 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Electrical Engineering</div>
-            <p class="category">University of São Paulo</p>
+            <div class="h5">Electrical Engineering</div>
+            <p class="category">(POLI-USP)University of São Paulo</p>
             <p>
               <ul>
                 <li>Winner of Gender and Citizenship Hackathon of Lower House - Brasília, DF ⚡</li>
