--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Business Administration</div>
+            <div class="h5">Business Administration</div>
             <p class="category">University of Illinois Chicago (UIC)</p>
             Scholarship holder ✍ <br>
             Relevant Coursework: <br>
