--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
       </div>
     
   </div>
-</div> <!-- div end -->
+</div> 
 <div class="section">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
