--- a/index.html
+++ b/index.html
@@ -548,6 +548,10 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
+               <div class="col-lg-2 col-md-3 cc-reference-header"><a href="https://www.datacamp.com/profile/silvareisrafael"  target="_blank"><img src="images/aws.png" alt="Image"/></a>
+                <div class="h7 pt-2">AWS Certifications</div>
+                <p class="category"></p>
+              </div>
               <div class="col-lg-2 col-md-3 cc-reference-header"><a href="https://www.datacamp.com/profile/silvareisrafael"  target="_blank"><img src="images/datacamp.jpg" alt="Image"/></a>
                 <div class="h7 pt-2">Datacamp</div>
                 <p class="category"></p>
