mudanca no site

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/your@email.com" method="POST">
+                    <form action="https://formspree.io/silva.reis.rafael@email.com" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
@@ -708,7 +708,7 @@
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://twitter.com/rafaelreisrs" target="_blank"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#" target="_blank"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/rafaelrsreis"  target="_blank"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">Rafael Reis</div>
       <div class="text-center text-muted">
-        <p>&copy; Rafael Reis. All rights reserved.<br>Design - <a class="credit" href=" target="_blank"></a></p>
+        <p>&copy;  All rights reserved.<br>Design - <a class="credit" href=" target="_blank"></a></p>
       </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js"></script>
