--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@
           <div class="carousel-item active">
             <div class="row">
               <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/python.jpg" alt="Image"/>
-                <div class="h7 pt-2">Pythonizando todo dia</div>
-                <p class="category">CEO / WEBM</p>
+                <div class="h7 pt-2"></div>
+                <p class="category"></p>
               </div>
               <div class="col-lg-10 col-md-9">
                 <p> </p>
